--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "FikraSpace",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.26.3",
+    "firebase": "^5.5.9",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "styled-components": "^4.1.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1"
   }
